@@ -2,6 +2,7 @@
 	* CORE: Added support for java 7.  Dropped support for Java 6.
 	* CORE: Migrated to supporting AutoCloseable.  Most close() methods now throw Exception not IOException.
 	* CORE: Removed SqlExceptionUtil which hasn't been needed since Java 6.
+	* CORE: Removed some @Deprecated methods that had been with us for a while.
 	* JDBC: ormlite-jdbc jar now includes the -core classes.  No need to import ormlite-core jar anymore.
 	* ANDROID: ormlite-android jar now includes the -core classes.  No need to import ormlite-core jar anymore.
 
